--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "start": "shadow-cljs watch app",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
