update to hx 0.2.2

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "react": "^16.7.0-alpha.0",
     "react-dom": "^16.7.0-alpha.0",
+    "react-is": "^16.6.0",
     "shadow-cljs": "^2.6.18"
   },
   "devDependencies": {},
